--- a/package.json
+++ b/package.json
@@ -1,44 +1,42 @@
 {
-  "name": "react-typescript",
-  "version": "1.0.0",
-  "description": "Build UI that scales",
-  "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server --hot --inline"
-  },
-  "keywords": [
-    "react",
-    "typescript",
-    "webpack"
-  ],
-  "author": "bonta.jacopo@gmail.com",
-  "license": "ISC",
+  "name": "react-poc",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "source-map-loader": "^1.0.1",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react-redux": "^7.2.2"
+    "typescript": "^4.1.3",
+    "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^7.1.14",
-    "@types/webpack": "4.1.4",
-    "css-loader": "^3.6.0",
-    "html-webpack-plugin": "^4.3.0",
-    "node-sass": "^4.14.1",
-    "react-hot-loader": "^4.12.21",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.4.3",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0"
+    "@types/react": "^17.0.0"
   }
 }
