--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "bootstrap": "^4.6.0",
+    "firebase": "^8.7.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.0",
     "typescript": "^4.1.3",
@@ -38,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.0"
+    "@types/react": "^17.0.14",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
