--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.3",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.20.41",
+    "@types/react": "^16.14.21",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.22",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "firebase": "^8.7.1",
-    "react": "^17.0.1",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-hook-form": "^7.20.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "5.0.0",
     "sass": "^1.32.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.6",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.11"
   },
@@ -46,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.14",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.3.2"
   }
 }
