--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo Installing Node 16...
-      - curl -fsSL https://deb.nodesource.com/setup_16.x | -E bash 
+      - curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
       - apt-get install -y nodejs
   pre_build:
     commands:
